@@ -5,7 +5,9 @@ OpenPreviousDatabasesOnStartup=true
 AutoSaveAfterEveryChange=false
 AutoSaveOnExit=false
 AutoReloadOnChange=true
-MinimizeOnCopy=false
+HideWindowOnCopy=false
+MinimizeOnCopy=true
+DropToBackgroundOnCopy=false
 MinimizeOnOpenUrl=false
 UseGroupIconOnEntryCreation=true
 IgnoreGroupExpansion=false
