@@ -249,9 +249,9 @@
            </widget>
           </item>
           <item>
-           <widget class="QCheckBox" name="minimizeOnCopyCheckBox">
+           <widget class="QCheckBox" name="previewHideCheckBox">
             <property name="text">
-             <string>Minimize when copying to clipboard</string>
+             <string>Hide the entry preview panel</string>
             </property>
            </widget>
           </item>
@@ -263,11 +263,71 @@
            </widget>
           </item>
           <item>
-           <widget class="QCheckBox" name="previewHideCheckBox">
+           <widget class="QCheckBox" name="hideWindowOnCopyCheckBox">
             <property name="text">
-             <string>Hide the entry preview panel</string>
+             <string>Hide window when copying to clipboard</string>
             </property>
            </widget>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" name="hideWindowLayout_1">
+            <property name="spacing">
+             <number>0</number>
+            </property>
+            <item>
+             <spacer name="hideWindowSpacer_1">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeType">
+               <enum>QSizePolicy::Fixed</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QRadioButton" name="minimizeOnCopyRadioButton">
+              <property name="text">
+               <string>Minimize</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" name="hideWindowLayout_2">
+            <property name="spacing">
+             <number>0</number>
+            </property>
+            <item>
+             <spacer name="hideWindowSpacer_2">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeType">
+               <enum>QSizePolicy::Fixed</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QRadioButton" name="dropToBackgroundOnCopyRadioButton">
+              <property name="text">
+               <string>Drop to background</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </item>
          </layout>
         </widget>
